Updates from Overleaf

--- a/Ideal intro.tex
+++ b/Ideal intro.tex
@@ -102,36 +102,63 @@ We study the welfare and distributional effects of allowing consumers to request
 
 \sepline
 
-\newpage
+
 
 \begin{itemize}
     \item \textbf{In many markets customers are allowed to shop around and give examples.}
     
     In markets where prices are set for each individual it is common for consumers to get initial offers, which they can leverage to get revised offers.
-    \footnote{Selection markets, where the cost of providing the good is consumer dependent are one case of consumer specific prices, are the most prominent case of markets with consumer specific prices}
-    For example, when requesting a loan, banks make initial offers to customers and give them a Loan Estimate (LO) which is a document with the terms of the offer (see Figure \ref{fig:LE_example}). Then customers can use the LO from one bank to improve the terms of the offer from another bank.
-    \footnote{For example the Consumer Financial Protection Bureau says: "Your best bargaining chip is usually having Loan Estimates from other lenders in hand"(\href{https://www.consumerfinance.gov/owning-a-home/compare/compare-loan-estimates/\#:~:text=Negotiate\%20to\%20get\%20the\%20best,deal\%20for\%20you}{CFPB}), and an article providing advice on how to get a mortgage says: " Keep in mind that the mortgage quotes you get are not set in stone. Mortgage lenders have the flexibility to adjust their fees and even their interest rates. That means you can often use competing offers as leverage to negotiate your costs."(\href{https://themortgagereports.com/26016/shopping-for-a-mortgage-how-many-mortgage-quotes-do-i-need}{Mortgage Report}) and another website says "Once you have loan estimates from a few lenders, take a lower rate quote from a competitor to other lenders if you like the customer service or loan officer. They might be willing to match or beat the rate quote to win your business. That’s why shopping around pays off." (\href{https://www.credible.com/mortgage/how-to-shop-for-mortgage-rates}{Credible.com}) or " Many mortgage companies are advertising “bring me your LE, and we will meet it or beat it.”" (\href{https://nationalmortgageprofessional.com/news/keep-cool-calm-and-compliant}{National Mortgage Professional})}
-    Or when buying car insurance, it is advised to get quotes from multiple providers and to ask a company whether they can match a competitor's price or at least to provide a price lower than the initial quote. 
-    \footnote{For example \href{https://www.caranddriver.com/car-insurance/a36291420/price-matching-car-insurance/}{this} website says :"Similar to retail stores matching their competitors' sales prices, some insurance companies will offer you a lower rate on your car insurance if it's the same rate their competitor offers. " and then provides steps to negotiate price matching which are: \begin{enumerate}  \item Gather several different quotes from a variety of providers. Make sure you get quotes for the same amount of coverage that you already have. \item Contact your current provider.   \item Let your provider know that you were able to find a lower rate for your policy. Ask them if they're willing to match the price or at least offer a lower rate than what you're currently paying.     \item If your insurance company refuses to lower your rates, you might want to consider going with another company. Find a company with good customer reviews and contact them with your quotes.     \item Keep contacting providers until you find one willing to price match or give you the lowest rates. Just make sure you get the coverage you need.     \end{enumerate} Or \href{https://www.autoinsurance.org/what-is-an-auto-insurance-price-match/}{this} page says "Auto insurance price match is a practice where car insurance companies offer to match the lower price offered by a competitor for the same coverage. It allows consumers to get the same coverage at a lower cost by comparing rates from different companies."    }   
-    For example a \href{https://www.moneygeek.com/insurance/auto/how-to-lower-your-car-insurance-rate-if-you-cant-negotiate/}{website} suggests saying: 
+    \footnote{Selection markets, where the cost of providing the good is consumer-dependent, are a prominent case of consumer-specific pricing}
+    %\footnote{Selection markets, where the cost of providing the good is consumer dependent are one case of consumer specific prices, are the most prominent case of markets with consumer specific prices}
+
+    
+    
+    For example, when requesting a loan, banks make initial offers to customers and give them a Loan Estimate (LE) which is a document with the terms of the offer (see Figure \ref{fig:LE_example}). Then customers can use the LE from one bank to improve the terms of the offer from another bank.
+    Similarly, when buying car insurance, consumers are advised to gather quotes from multiple providers and ask firms to match a competitor’s price or at least to provide a price lower than the initial quote
+    %Or when buying car insurance, it is advised to get quotes from multiple providers and to ask a company whether they can match a competitor's price or at least to provide a price lower than the initial quote.
+    \footnote{See section \ref{sec:other_markets} for details and examples.  }.       
+    For example a consumer advice \href{https://www.moneygeek.com/insurance/auto/how-to-lower-your-car-insurance-rate-if-you-cant-negotiate/}{website} suggests saying: 
 
 "I've received quotes from [competitor] for less for the same coverage. What can you do to help me stay with your company?"
  
 
     \item \textbf{The effects of revised offers are ambiguous-> give an economic intuition. }
 
-    The effects of being able to request a revised offer, leveraging an initial offer to improve the subsequent offer of a company, are ambiguous. On one hand requesting a revised offer allows consumers to improve the terms offered by the firms in the initial instance. On the other hand, if firms anticipate consumers requesting revised offers then they might make worse initial offers\footnote{IT IS CRUCIAL TO HAVE A SIMPLE MODEL WHERE REVISED OFFERS IMPROVE THE EQUILIBRIUM SO THAT THE ARGUMENT MAKES SENSE AND TO PROVIDE A BETTER INTUITION. }. Moreover, revised offers could have distributional impacts, since some groups could be more likely to request the revised offers. \footnote{For example in the mortgage markte the CFPF is paying close attention to pricing exception in the context of fair lending (\href{https://www.mitchellsandler.com/news/pricing-exceptions-in-an-increasing-rate-environment\#:~:text=More\%20specifically\%2C\%20the\%20targeted\%20lenders,Finally\%2C\%20the\%20lenders\%20failed}{source}), particularly how minorities seem to be getting less pricing exceptions - the term used to refer to revised offers in this market.} 
+    The effects of allowing consumers to  request revised offers, leveraging an initial offer to improve the subsequent offer of a company, are ambiguous. On one hand, 
+    revised offers can improve terms relative to the initial offers.  On the other hand, if firms anticipate requests for revised offers, they might make worse initial offers\footnote{IT IS CRUCIAL TO HAVE A SIMPLE MODEL WHERE REVISED OFFERS IMPROVE THE EQUILIBRIUM SO THAT THE ARGUMENT MAKES SENSE AND TO PROVIDE A BETTER INTUITION. }. Moreover, revised offers could have distributional impacts, since some groups could be more likely to request revised offers. \footnote{
+    In mortgages, the Consumer Financial Protection Bureau has scrutinized revised offers and the disparities by race/ethnicity (\href{https://www.mitchellsandler.com/news/pricing-exceptions-in-an-increasing-rate-environment\#:~:text=More\%20specifically\%2C\%20the\%20targeted\%20lenders,Finally\%2C\%20the\%20lenders\%20failed}{source}).} 
+    %The effects of being able to request a revised offer, leveraging an initial offer to improve the subsequent offer of a company, are ambiguous. On one hand requesting a revised offer allows consumers to improve the terms offered by the firms in the initial instance. On the other hand, if firms anticipate consumers requesting revised offers then they might make worse initial offers\footnote{IT IS CRUCIAL TO HAVE A SIMPLE MODEL WHERE REVISED OFFERS IMPROVE THE EQUILIBRIUM SO THAT THE ARGUMENT MAKES SENSE AND TO PROVIDE A BETTER INTUITION. }. Moreover, revised offers could have distributional impacts, since some groups could be more likely to request the revised offers. \footnote{For example in the mortgage markte the CFPF is paying close attention to pricing exception in the context of fair lending (\href{https://www.mitchellsandler.com/news/pricing-exceptions-in-an-increasing-rate-environment\#:~:text=More\%20specifically\%2C\%20the\%20targeted\%20lenders,Finally\%2C\%20the\%20lenders\%20failed}{source}), particularly how minorities seem to be getting less pricing exceptions - the term used to refer to revised offers in this market.} 
 
 
     \item \textbf{Lack of evidence and reasons}
+
+    Despite the prevalence of revised offers in many markets, there is limited evidence on their impact\footnote{\textcolor{red}{WE SHOULD MAKE A BETTER ARGUMENT WHY KNOWING THEIR IMPACT IS IMPORTANT. MAYBE ONE LINE OF ARGUMENT WOULD BE TO SAY THAT THERE COULD BE POTENTIAL BENEFITS OF POSTING PRICING WITHOUT THIS SEQUENTIAL OFFERS MECHANISM}}. One reason is data availability. 
+    Ideally, one would observe not only initial offers but also all revised offers and the consumer’s purchase decision. But most datasets contain only purchases, so it is not possible to see the sequence of offers made to a particular consumer.
+
     
-    Despite the prevalence of revised offers in many markets, there is limited evidence on how allowing consumers to request revised offers affects market outcomes. One reason for this lack of evidence is the difficulty of getting data on offers. Ideally one would observe data not only on the initial offers made by firms to consumers, but also on all the revised offers made when consumers request them and on the choice made by consumers, the purchase decision. But most datasets that we are aware of contain purchases, where is not possible to see the sequence of offers made to a particular consumer. 
+    %Despite the prevalence of revised offers in many markets, there is limited evidence on how allowing consumers to request revised offers affects market outcomes. One reason for this lack of evidence is the difficulty of getting data on offers. Ideally one would observe data not only on the initial offers made by firms to consumers, but also on all the revised offers made when consumers request them and on the choice made by consumers, the purchase decision. But most datasets that we are aware of contain purchases, where is not possible to see the sequence of offers made to a particular consumer. 
+
+    
+
+    \item \textbf{Our setting}
+
+    We use data from the Chilean centralized annuities marketplace to study the impact of revised offers. This market presents several particularities that make it suitable to study the impact of revised offers. First, because it is a centralized market there is data on all the initial and revised offers consumers receive. Secondly, prior to 2025 requesting revised offers was common, in our sample more than 70\% of consumers requested one. Third, in 2025 the regulator prohibited revised offers, which provides exogenous variation. 
+
+    %    We use data from the Chilean centralized annuities marketplace to study the impact of revised offers. This market presents several particularities that make it suitable to study the impact of revised offers. First, given that the it is a centralized market there is data on all the initial and revised offers the consumers receive. Secondly, prior to 2025 requesting revised offers was a common practice, in our sample more than 70\% of the consumers request one. Third, in 2025 the regulator prohibited requesting revised offers, which provides exogenous variation. 
 
 
     \item \textbf{What we do}
 
-    We study the impact of allowing consumers to request revised offers in a centralized market for annuities in Chile. The setting offers rich administrative data on initial and revised offers, as well as on the purchase decision of consumers. Moreover we leverage variation in the market design, since in [YEAR] the regulator banned the request of revised offers.    
-    We build a two-stage model of firm competition and consumer choice to study the effects of allowing revised offers on market outcomes. In a first stage firms simultaneously send initial offers to consumers. Consumers then decide whether to request revised offers from firms, to choose one of the initial offers or to not purchase. In the second stage firms simultaneously send revised offers to consumers that requested them. Finally, consumers choose one of the revised offers, one of the initial offers or to not purchase. 
+    We study the impact of allowing consumers to request revised offers in a centralized market for annuities in Chile. The setting offers rich administrative data on initial and revised offers, as well as on the final purchase decision. Moreover, we leverage variation in the market design, since in 2025 the regulator prohibited revised offers. 
+    We first provide descriptive evidence of the role of the revised offers. Revised offers are significantly higher than initial offers.  When asking a revised offers the improvement over the initial offer is on average \textbf{1.8} monthly wages. 
+
+    To study the welfare effects of revised offers, we build a two‑stage model of firm competition and consumer choice. In a first stage, firms simultaneously send initial offers to consumers. Consumers then decide whether to request revised offers from firms, choose one of the initial offers, or not purchase. In the second stage, firms simultaneously send revised offers to consumers that requested them. Finally, consumers choose one of the revised offers, one of the initial offers, or not purchase. 
+
+
+
+    %We study the impact of allowing consumers to request revised offers in a centralized market for annuities in Chile. The setting offers rich administrative data on initial and revised offers, as well as on the purchase decision of consumers. Moreover we leverage variation in the market design, since in [YEAR] the regulator banned the request of revised offers.    We first provide descriptive evidence of the role of the revised offers. Revised offers are significantly higher than initial offers.  When asking a revised offers the improvement over the initial offer is on average \textbf{1.8} monthly wages. 
+    
+    % We build a two-stage model of firm competition and consumer choice to study the effects of allowing revised offers on market outcomes. In a first stage firms simultaneously send initial offers to consumers. Consumers then decide whether to request revised offers from firms, to choose one of the initial offers or to not purchase. In the second stage firms simultaneously send revised offers to consumers that requested them. Finally, consumers choose one of the revised offers, one of the initial offers or to not purchase. 
 
     We find that [RESULTS TO BE ADDED]
 
@@ -151,24 +178,30 @@ We study the welfare and distributional effects of allowing consumers to request
     \item \textbf{Paper organization}
     
     The remainder of the paper is organized as follows. Section 2 describes our setting and  data. Section 3 provides descriptive evidence [WHAT DESCRIPTIVES]. Section  4 describes our model of competition with revised offers. Section 5 discusses the identification  and estimation of the model and the main results from the estimates. Section 6 discusses  our counterfactual analysis of the impacts of banning revised offers. Finally, Section 7 concludes.
-    \item \textbf{}
-    \item \textbf{}
-    \item \textbf{}
-    \item \textbf{}
-    \item \textbf{}
-    \item \textbf{}
-    \item \textbf{}
-    \item \textbf{Discrimination and banning of revised offers}
-    
-    Revised offers have raised concerns about distribuional impacts. 
-
-    For example the CFPB in the US has expressed concerns about minorities getting less revised offers in the mortgage market. \footnote{In the mortgage market the revised offers are called \textit{pricing exceptions} }
-
-    % find evidence of banning pricing exceptions. 
 
 \end{itemize}
 
 
+   %\textbf{Discrimination and banning of revised offers} Revised offers have raised concerns about distributional impacts. For example the CFPB in the US has expressed concerns about minorities getting less revised offers in the mortgage market. \footnote{In the mortgage market the revised offers are called \textit{pricing exceptions} and there is evidence that firms use them in a discriminatory manner (\cite{jones_compete_nodate,cfpb_supervisory_2021})}
+    % find evidence of banning pricing exceptions. 
+    %Revised offers have raised concerns about distributional impacts. 
+
+
+
+
+\vspace{2cm}
+
+%Terms: 
+%\begin{itemize}
+%    \item pricing exceptions: mortgage market 
+
+%    \item price matching: 
+
+%    \item price optimization:  any method of taking into account an individual’s or class’s willingness to pay a higher premium relative to other individuals or classes.    \cite{jones_notice_2015}
+%\end{itemize}
+
+
+%%% Seba Bauer structure 
 % Say that congestion is a problem 
 
 % airlines need a slot: how do they get it? 
@@ -181,15 +214,58 @@ We study the welfare and distributional effects of allowing consumers to request
 
 
 
+\section{Appendix}
+
+\subsection{Other markets}\label{sec:other_markets}
+
+In this section we review the institutional details of other markets which use revised offers. 
+
+\subsubsection{Mortgage market}\label{sec:other_mortgage}
+
+In the mortgage market is common to request improvements on the Loan estimates. 
+
+For example the Consumer Financial Protection Bureau says: "Your best bargaining chip is usually having Loan Estimates from other lenders in hand"(\cite{cfpb_compare_2024} % https://www.consumerfinance.gov/owning-a-home/compare/compare-loan-estimates/
+), and an article providing advice on how to get a mortgage says: " Keep in mind that the mortgage quotes you get are not set in stone. Mortgage lenders have the flexibility to adjust their fees and even their interest rates. That means you can often use competing offers as leverage to negotiate your costs."(\cite{mortgage_reports_how_2025} %https://themortgagereports.com/26016/shopping-for-a-mortgage-how-many-mortgage-quotes-do-i-need
+) and another website says "Once you have loan estimates from a few lenders, take a lower rate quote from a competitor to other lenders if you like the customer service or loan officer. They might be willing to match or beat the rate quote to win your business. That’s why shopping around pays off." (\cite{kearns_how_2024}) or " Many mortgage companies are advertising “bring me your LE, and we will meet it or beat it.”" (\cite{conner_keep_2024})
+
+\subsubsection{Auto insurance}\label{sec:other_carinsurance}
+
+For example \textcite{hearst_autos_research_price_2021} says :"Similar to retail stores matching their competitors' sales prices, some insurance companies will offer you a lower rate on your car insurance if it's the same rate their competitor offers. " and then provides steps to negotiate price matching which are: 
+\begin{enumerate}  
+    \item Gather several different quotes from a variety of providers. Make sure you get quotes for the same amount of coverage that you already have. 
+    \item Contact your current provider. 
+    \item Let your provider know that you were able to find a lower rate for your policy. Ask them if they're willing to match the price or at least offer a lower rate than what you're currently paying.   
+    \item If your insurance company refuses to lower your rates, you might want to consider going with another company. Find a company with good customer reviews and contact them with your quotes.   
+    \item Keep contacting providers until you find one willing to price match or give you the lowest rates. Just make sure you get the coverage you need.   
+\end{enumerate} 
+Or \textcite{sims_what_2020} page says "Auto insurance price match is a practice where car insurance companies offer to match the lower price offered by a competitor for the same coverage. It allows consumers to get the same coverage at a lower cost by comparing rates from different companies."    
+
+\textcolor{red}{Some articles say that insurance policies are non-negotiable, eg. \cite{roehr_roehr_2024}}
+
+
+\subsubsection{Housing market}
+
+In the housing market something similar occurs. Sellers frequently get several offers for their house, what is called a multiple offer situation. 
+
+In that situation it is advised to 
+"Ask all buyers to submit their highest and best offer within a limited time. This will spark competition among buyers, prompting them to submit their best and final offer. You can then analyze and choose the the best suited offer for you" (\cite{houzeo_highest_2025}). Although in this situation there are multiple buyers and one seller, it maintains the structure of the annuities market and of our prior examples, there are many agents in the uninformed side of the market and one informed party.  
+
+The National Association of Realtors(\cite{nar_buyers_2009}), suggests: "It’s possible you may be faced with multiple competing offers to purchase your property". In this case, one of the strategies is: 
+"you can inform all potential purchasers that other offers are “on the table” and invite them to make their “best” offer". 
+
+
+
+\subsection{Figures}
+
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.75\textwidth]{figures/docs_screenshots/Loan Estimate.png}
+    \includegraphics[width=0.6\textwidth]{figures/docs_screenshots/Loan Estimate.png}
     \caption{Example of a Loan Estimate, source: \url{https://www.consumerfinance.gov/owning-a-home/loan-estimate/}}
     \label{fig:LE_example}
 \end{figure}
 
 
-
+\printbibliography
 
  
  
