Add new models and update meeting notes
Added new LaTeX files for model variants (model7_search_and_learning_v2, v22, v3, v3_2) and search_selection. Updated author name in meeting notes and fixed figure paths to use relative references. Improved abstract and introduction in ideal_intro_v2.tex. Expanded and clarified the model and game structure in model7_search_and_learning.tex.

--- a/before meetings/250820_Haile.tex
+++ b/before meetings/250820_Haile.tex
@@ -67,7 +67,7 @@
 %\subtitle{A Mini Literature Overview}
 
 \author{%
- Lucas Condeza
+ Lucas Schmitz
 \inst{1} \and
    %\and
 %  Coauthor Three\inst{3}
