--- a/before meetings/250903_Charles.tex
+++ b/before meetings/250903_Charles.tex
@@ -112,7 +112,7 @@
 Selection? some firms better at predicting? 
  \begin{figure}
      \centering
-     \includegraphics[width=0.6\linewidth]{figures//IE4/IE4_survival_curves_by_age_top_firms.png}
+     \includegraphics[width=0.6\linewidth]{../figures//IE4/IE4_survival_curves_by_age_top_firms.png}
      %\caption{Enter Caption}
      \label{fig:placeholder}
  \end{figure}
@@ -124,7 +124,7 @@ Selection? some firms better at predicting?
 Heterogeneity in terms of relying on external offers. 
  \begin{figure}
      \centering
-     \includegraphics[width=0.6\linewidth]{figures//IE4/IE4_variation_share_external.png}
+     \includegraphics[width=0.6\linewidth]{../figures//IE4/IE4_variation_share_external.png}
      %\caption{Enter Caption}
      \label{fig:placeholder}
  \end{figure}
@@ -134,7 +134,7 @@ Heterogeneity in terms of relying on external offers.
 \begin{frame}{Frame Title}
  \begin{figure}
      \centering
-     \includegraphics[width=0.6\linewidth]{figures//IE4/IE4_external_offers_by_intermediary.png}
+     \includegraphics[width=0.6\linewidth]{../figures//IE4/IE4_external_offers_by_intermediary.png}
      %\caption{Enter Caption}
      \label{fig:placeholder}
  \end{figure}
@@ -145,7 +145,7 @@ Heterogeneity in terms of relying on external offers.
  \begin{frame}{Frame Title}
  \begin{figure}
      \centering
-     \includegraphics[width=0.6\linewidth]{figures//IE4/IE4_intermediary_search_box.png}
+     \includegraphics[width=0.6\linewidth]{../figures//IE4/IE4_intermediary_search_box.png}
      %\caption{Enter Caption}
      \label{fig:placeholder}
  \end{figure}
@@ -157,7 +157,7 @@ Heterogeneity in terms of relying on external offers.
  Intermediaries affect search. 
  \begin{figure}
      \centering
-     \includegraphics[width=0.6\linewidth]{figures//IE4/IE4_highest_by_intermediary_type.png}
+     \includegraphics[width=0.6\linewidth]{../figures//IE4/IE4_highest_by_intermediary_type.png}
      %\caption{Enter Caption}
      \label{fig:placeholder}
  \end{figure}
@@ -169,7 +169,7 @@ Heterogeneity in terms of relying on external offers.
 
 \begin{figure}
      \centering
-     \includegraphics[width=0.6\linewidth]{figures//IE4/IE4_external_acceptance_by_intermediary.png}
+     \includegraphics[width=0.6\linewidth]{../figures//IE4/IE4_external_acceptance_by_intermediary.png}
      %\caption{Enter Caption}
      \label{fig:placeholder}
  \end{figure}
