--- a/before meetings/250917_Haile.tex
+++ b/before meetings/250917_Haile.tex
@@ -67,7 +67,7 @@
 %\subtitle{A Mini Literature Overview}
 
 \author{%
- Lucas Condeza
+ Lucas Schmitz
 \inst{1} \and
    %\and
 %  Coauthor Three\inst{3}
@@ -111,7 +111,7 @@
 
  \begin{figure}
      \centering
-     \includegraphics[width=0.6\linewidth]{figures//IE4/IE4_survival_curves_by_age_top_firms.png}
+     \includegraphics[width=0.6\linewidth]{../figures//IE4/IE4_survival_curves_by_age_top_firms.png}
      %\caption{Enter Caption}
      \label{fig:placeholder}
  \end{figure}
@@ -143,7 +143,7 @@ To show selection on unobservables one needs to observe all the variables observ
 \begin{frame}{Model(2)}
  \begin{figure}
      \centering
-     \includegraphics[width=0.6\linewidth]{figures/simulations/sigma_panels_2firms.png}
+     \includegraphics[width=0.6\linewidth]{../figures/simulations/model4/model4_sigma_panels_2firms.png}
      %\caption{Enter Caption}
      \label{fig:placeholder}
  \end{figure}
