--- a/ideal_intro/Ideal intro_v2.tex
+++ b/ideal_intro/Ideal intro_v2.tex
@@ -100,7 +100,10 @@
 
 \begin{abstract}
 
-In markets with asymmetric information it is common for consumers to receive initial offers and then leverage them to request revised offers—improved quotes provided after the consumer asks for better terms-, yet there is limited evidence on their effects on market outcomes and welfare. 
+In markets where prices are set for each individual  t is common for consumers to receive initial offers and then leverage them to request revised offers—improved quotes provided after the consumer asks for better terms-, yet there is limited evidence on their effects on market outcomes and welfare.
+%In markets with asymmetric information it is common for consumers to receive initial offers and then leverage them to request revised offers—improved quotes provided after the consumer asks for better terms-, yet there is limited evidence on their effects on market outcomes and welfare.
+
+
 %Initial offers followed by revised offers - follow-up quotes made after the consumer requests better terms-  are widespread in markets with asymmetric information, yet there is limited evidence on their effects on market outcomes and welfare. 
 The effect of revised offers are ambiguous and depend on [USE THE MODEL TO EXPLAIN ON WHAT DO THEY DEPEND]
 
@@ -112,7 +115,7 @@ Using data that records initial and revised offers, and leveraging a reform that
 
 We develop and estimate a structural two-stage model of firm competition and consumer choice. Firms send simultaneous initial offers, consumers decide whether to solicit revisions, and firms respond with revised offers; we recover preference and cost parameters from observed offer sequences and purchase decisions. Counterfactuals \footnote{\textcolor{red}{[what counterfactuals should we study?]}} show that permitting revised offers [IN(DE)CREASES] purchase rates and [INCREASES-lowers] average final prices, [RAISING/LOWERING]  aggregate consumer surplus, [MENTION DISTRIBUTIONAL IMPACTS].
 
-Diego: May this have anticompetitive effects? Like price matching, that helps firms monitor collusion (even if it is tacit). Maybe forbidding new requests reduces price transparency. The effect of transparency on competition and  prices is ambiguous: Green and Porter (1984), Ater and Rigbi (2023?), Luco (2017?), Montag et al (??), mi paper con JP.
+%Diego: May this have anticompetitive effects? Like price matching, that helps firms monitor collusion (even if it is tacit). Maybe forbidding new requests reduces price transparency. The effect of transparency on competition and  prices is ambiguous: Green and Porter (1984), Ater and Rigbi (2023?), Luco (2017?), Montag et al (??), mi paper con JP.
 \end{abstract}
 
 \sepline
@@ -145,6 +148,14 @@ For example a consumer advice \href{https://www.moneygeek.com/insurance/auto/how
 
 The effects of allowing consumers to  request revised offers, leveraging an initial offer to improve the subsequent offer of a company, are ambiguous. On one hand,     revised offers can improve terms relative to the initial offers.  On the other hand, if firms anticipate requests for revised offers, they might make worse initial offers\footnote{IT IS CRUCIAL TO HAVE A SIMPLE MODEL WHERE REVISED OFFERS IMPROVE THE EQUILIBRIUM SO THAT THE ARGUMENT MAKES SENSE AND TO PROVIDE A BETTER INTUITION. }. Moreover, revised offers could have distributional impacts, since some groups could be more likely to request revised offers. \footnote{
 In mortgages, the Consumer Financial Protection Bureau has scrutinized revised offers and the disparities by race/ethnicity (\href{https://www.mitchellsandler.com/news/pricing-exceptions-in-an-increasing-rate-environment\#:~:text=More\%20specifically\%2C\%20the\%20targeted\%20lenders,Finally\%2C\%20the\%20lenders\%20failed}{source}).} 
+
+There are two economic forces at play. First, requesting a revised offer reveals information about the consumer's preferences, hence firms can use the two stages of the game to better price discriminate. Second, requesting a revised offer might also reveal something about the consumer's private type - e.g. private information about health -, therefore interacting with adverse selection issues. 
+
+Therefore the object of interest are the joint distribution of search cost and price disutility and the joint distribution of search cost and private type. 
+
+
+
+
 
 
 %%%% Lack of evidence and reasons}
