--- a/models/model7_search_and_learning_v2.tex
+++ b/models/model7_search_and_learning_v2.tex
@@ -70,7 +70,7 @@
 \addbibresource{../references.bib}
 \begin{document}
 
-
+\section{Outline of discussion meeting Steve (19th nov.)}
 
 Consumer search and selection are common features of markets. Two markets that exhibit this features are: auto insurance and mortgage loans.
 
@@ -78,6 +78,7 @@ If search propensity and private information are not independent, then searching
 
 Particularly, if search costs are correlated with private information then searching could reveal information about the consumer's type and improve or worsen selection issues. For example, if healthy consumers search then they can get better quotes, which could help with adverse selection. 
 
+Our setting is the annuities market in Chile 
 
 This model includes the following features: 
 \begin{itemize}
@@ -92,14 +93,14 @@ This model includes the following features:
 Consumer utility is 
 
 \begin{align}
-    u_{ij} = \beta r_{j} - \alpha_i F_{ij} + \xi_j + \epsilon_{ij}
+    u_{ij} = \beta r_{j} + \alpha_i F_{ij} + \xi_j + \epsilon_{ij}
 \end{align}
 where $r_j$ is the risk rating of the firm, $F_{ij}$ is flow payment of the offer, and $\xi_j$ is a firm-specific unobserved characteristic. We assume that $\epsilon_{ij}$ is distributed Gumbel. 
 
 
 Consumers have search costs ($s_i$), to simplify we assume that they can be shoppers or non-shoppers,  and also private information about their health ($h_i$), which creates selection. The joint distribution is denoted by $F(s, h)$. For now we assume that a share $\lambda$ of consumers are shoppers, and $s_i = 1$ means that the consumer is a shopper. 
 
-Assume $\alpha_i \in \{\alpha^S, \alpha^N \}$, where $|\alpha^S| > |\alpha^N|$, i.e. shoppers are more price sensitive than non-shoppers. 
+Assume $\alpha_i \in \{\alpha^S, \alpha^N \}$, where $\alpha^S > \alpha^N$, i.e. shoppers are more price sensitive than non-shoppers. 
 
 Assume that the demand from shoppers is $D^S_j(F)$ and the demand from non-shoppers is $D^N_j(F)$. 
 %Moreover we have that the elasticity of searchers is higher than the elasticity of non-searchers, i.e. $\eta^S(F) > \eta^N(F)$, where $\eta^i(F) = \frac{\partial D^i(F)}{\partial F} \frac{F}{D^i(F)}$.
@@ -110,14 +111,8 @@ Assume that the demand from shoppers is $D^S_j(F)$ and the demand from non-shopp
 
 For each consumer firms draw an observable signal  $\theta$ from a distribution $F_j(\cdot)$, which represents the observed cost of serving that consumer\footnote{Costs are given by the discounted present value of expected flows, where the expectation is taken using the mortality tables. We assume that mortality tables are the same across firms, but that the interest rate is not observable.}. We assume that total cost is given by $c_j(\theta, h_i)$. And define the expected cost given the observable signal as: $c_j(\theta) = \mathbb{E}[c_j(\theta, h_i) | \theta]$.
 
-
-
-%For each consumer firms draw an observable signal  $\theta$ from a distribution $F_j(\cdot)$, which represents the observed cost of serving that consumer\footnote{Costs are given by the discounted present value of expected flows, where the expectation is taken using the mortality tables. We assume that mortality tables are the same across firms, but that the interest rate is not observable.}. We assume that total cost is given by $c_j(\theta, h_i)$. And define the expected cost given the observable signal as: $c_j(\theta) = \mathbb{E}[c_j(\theta, h_i) | \theta]$.
-
-%For each consumer firms observe a signal about the cost of the consumer, denoted by $\hat \theta_{ji}$ drawn from a $\mathcal{N}(0, \sigma_j^2)$ with density $\phi(\hat \theta_{ji};\theta_j, \sigma_j)$. Note that this is a private value auction, and 
-
-
-The game has two stages, first firms make initial offers $F_{ij}^{T1}$, then consumers decide whether to search or not depending on their search costs, in the second stage firms compete in an English auction. We sill use backward induction to solve the game. 
+ 
+The game has two stages, first firms make initial offers $F_{ij}^{T1}$, then consumers decide whether to search or not depending on their search costs, in the second stage firms update their prices.  We sill use backward induction to solve the game. 
 
 \textbf{Second stage}
 
@@ -125,15 +120,24 @@ In the second stage firms observe the offers made in the first stage, and they u
 
 When the consumer searches, firms update their beliefs about the consumer type in terms of $\alpha$ and $h$. 
 
-
-
-The FOC of the firm problem is: 
+The profits in the second stage are:
 
 \begin{align}
-    F_{ij}^{*} = \mathbb{E}[c_j(\theta, h_i) | s_i =1, \theta] + \frac{1}{\alpha^S (1 - D_j^{S}(F^{T2}))}
+    \pi_j^{T2}(\theta) = D_j^{S}(F^{T2}) (S_i - F_{ij}^{T2}  \mathbb{E}[c_j(\theta, h_i) | s_i =1, \theta])
 \end{align}
 
+Then, the desired offer ($F_{ij}^*$) solves the FOC of the firm problem: 
+
+\begin{align}
+    - D_j^{S}(F^*, F_{-j}^{T2}) + \frac{\partial D_j^{S}(F^*, F_{-j}^{T2})}{\partial F_{ij}^{*}}(S_i - F_{ij}^{*}  \cdot \mathbb{E}[c_j(\theta, h_i) | s_i =1, \theta]) = 0
+\end{align}
+
+
+
 Note that there are two changes with respect to the first stage: firms when updating their beliefs about the consumer type also update the expected cost. Moreover, the demand elasticity is different since only shoppers are participating in this second stage.
+
+
+
 
 where 
 \begin{align}
@@ -144,28 +148,13 @@ because consumers can always accept the first offer.
 Then, the expected profits in this second stage are: 
 
 \begin{align}
-    \pi_j^{T2}(\theta) = D_j^{S}(F^{T2}) (F_{ij}^{T2} - \mathbb{E}[c_j(\theta, h_i) | s_i =1, \theta])
+    \pi_j^{T2}(\theta) = D_j^{S}(F^{T2}) (S_i - F_{ij}^{T2} \cdot  \mathbb{E}[c_j(\theta, h_i) | s_i =1, \theta])
 \end{align}
 
 One issue still to resolve is under what conditions the equilibrium exists and is unique. 
 
 
-% In the second stage firms observe the offers made in the first stage, and they compete in an English auction.
-% When the consumer searches, firms update their beliefs about the consumer type in terms of $\alpha$ and $h$. 
-% The expected surplus created by the firm $j$ is: 
-% \begin{align}
-%     \beta r_j - \alpha^S \mathbb{E}[c_j(\theta, h_i) | s_i =1, \theta] + \xi_j + \epsilon_{ij}
-% \end{align}
-% then the firm winning the auction will be the one that creates the highest expected surplus for the consumer. Without loss of generality assume that firms are ordered in terms of expected surplus, then firm 1 wins the auction and pays $F_{i1}^{T2}$ given by\footnote{By law firms can not decrease the offered amount. For simplicity here we ignore that institutional feature}: 
-% \begin{align}
-%     \beta r_{1} - \alpha_i F_{i1}^{T2} + \xi_j + \epsilon_{i1} = \beta r_2 - \alpha^S \mathbb{E}[c_2(\theta, h_i) | s_i =1, \theta] + \xi_j + \epsilon_{i2}
-% \end{align}
-% Then the market share in this second stage is given by: 
-%\begin{align}
-%     D_j^{T2}(F^{T1}) = \frac{\exp(\beta r_j - \alpha^S \mathbb{E}[c_j(\theta, h_i) | s_i =1, \theta] + \xi_j + \epsilon_{ij}) }{1 + \sum_j \exp(\beta r_j - \alpha^S \mathbb{E}[c_j(\theta, h_i) | s_i =1, \theta] + \xi_j + \epsilon_{ij} )}
-% \end{align}
-% and the expected margin, conditional on selling is: 
-
+\vspace{2cm}
  
 
 \textbf{First stage}
@@ -175,43 +164,39 @@ In the first stage firms make offers $F_{ij}^{T1}$ taking into account the expec
 The profits maximized by first stage offers are: 
 
 \begin{align}
-    (1-\lambda) D_j^N(F^{T1}) (F_{ij}^{T1} - \mathbb{E}[c_j(\theta, h_i) | \theta, s_i = 0]) + \lambda \pi_j^{T2} 
+    (1-\lambda) D_j^N(F^{T1}) (S_i - F_{ij}^{T1} \cdot  \mathbb{E}[c_j(\theta, h_i) | \theta, s_i = 0]) + \lambda \pi_j^{T2} 
 \end{align}
 
 The FOC of the firm problem is: 
 
 \begin{align}
-    D_j^N(F^{T1}) + \frac{\partial D_j^N(F^{T1})}{\partial F_{ij}^{T1}} (F_{ij}^{T1} - \mathbb{E}[c_j(\theta, h_i) | \theta, s_i = 0]) + \lambda  \underbrace{\frac{\partial \pi_j^{T2} }{\partial F_{ij}^{T2}} \frac{\partial F_{ij}^{T2}}{\partial F_{ij}^{T1}}}_{\text{Second stage effect}} = 0
+    -D_j^N(F^{T1}) + \frac{\partial D_j^N(F^{T1})}{\partial F_{ij}^{T1}} (S_i - F_{ij}^{T1} \cdot \mathbb{E}[c_j(\theta, h_i) | \theta, s_i = 0]) + \lambda  \underbrace{\frac{\partial \pi_j^{T2} }{\partial F_{ij}^{T2}} \frac{\partial F_{ij}^{T2}}{\partial F_{ij}^{T1}}}_{\text{Second stage effect}} = 0
 \end{align}
 
 Note that the second stage effect captures that the first stage offer constraints the second stage offer. This effects depends on the difference in terms of elasticity and private information of shoppers and non-shoppers. For example, if $F(h|s_i =0)$ first order stochastically dominates $F(h|s_i =1)$ then the expected cost of shoppers is higher  than the expected cost of non-shoppers. In this case if the price disutility is the same for both groups then the firm would like to make lower offers in the second stage. 
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newpage 
+%\newpage 
+
+%For each consumer firms observe a signal about the cost of the consumer, denoted by $\hat \theta_{ji}$ drawn from a $\mathcal{N}(0, \sigma_j^2)$ with density $\phi(\hat \theta_{ji};\theta, \sigma_j)$. 
 
 
+%Initially firms make offers $F_{ij}^{T1}$. 
 
-\vspace{2cm}
-
-For each consumer firms observe a signal about the cost of the consumer, denoted by $\hat \theta_{ji}$ drawn from a $\mathcal{N}(0, \sigma_j^2)$ with density $\phi(\hat \theta_{ji};\theta, \sigma_j)$. 
-
-
-Initially firms make offers $F_{ij}^{T1}$. 
-
-In the second stage firms compete in a English auction, and they observe the offers made in the first stage. 
+%In the second stage firms compete in a English auction, and they observe the offers made in the first stage. 
 
 
-\textbf{Second stage}
+%\textbf{Second stage}
 
-In the second stage firms observe the offers made in the first stage, and they compete in an English auction. 
+%In the second stage firms observe the offers made in the first stage, and they compete in an English auction. 
 
-Given first stage offers $F^{T1}$, insurers update their beliefs about the consumer type. 
+%Given first stage offers $F^{T1}$, insurers update their beliefs about the consumer type. 
 
 
-\textbf{First stage}
+%\textbf{First stage}
 
-Insurers get a signal about the expected cost of the consumer. 
+%Insurers get a signal about the expected cost of the consumer. 
 
 
 
@@ -220,17 +205,16 @@ Insurers get a signal about the expected cost of the consumer.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newpage
+%\newpage
 
-Effects of the second stage: 
+%Effects of the second stage: 
 
-\begin{itemize}
-    \item Information is revealed about the consumer type, which increases the level of competition, e.g. see \textcite{cosconati_competing_2025}
+%\begin{itemize}
+%    \item Information is revealed about the consumer type, which increases the level of competition, e.g. see \textcite{cosconati_competing_2025}
     
-    \item There are distributional effects: shoppers might win and non-shoppers might end up with a worse offer. 
+%    \item There are distributional effects: shoppers might win and non-shoppers might end up with a worse offer. 
     
-    \item 
-\end{itemize}
+%\end{itemize}
 
 
 
