Add model7_search_and_learning_v3_3 files
Removed auxiliary files for v3_2 and added new LaTeX source and build files for model7_search_and_learning_v3_3. Updated the .tex file to reflect the new version.

--- a/models/model7_search_and_learning_v3_3.tex
+++ b/models/model7_search_and_learning_v3_3.tex
@@ -195,6 +195,17 @@ Also define
      [1-\pi_1(\theta, (\hat \theta_{-j}, \hat \theta_j))] 
     \phi(\hat \theta_{-j}; \theta) d\hat \theta_{-j}
 \end{align}
+and equivalently for searchers, define: 
+
+
+\begin{align}
+    \hat D_{j1}(\theta, \hat \theta_j) &= Pr( D = j, S= 1  \mid \hat \theta_j, \theta) 
+    %= \int_{\hat \theta_{-j}} Pr( D = j \mid \hat \theta, \theta, S=0) [1-\pi_1(\theta, (\hat \theta_{-j}, \hat \theta_j))]
+    %  \phi(\hat \theta_{-j}; \theta) d\hat \theta_{-j} \notag \\
+    %&= \int_{\hat \theta_{-j}} \frac{\exp( \gamma(\theta) F_j^{1T}(\hat \theta_j) + \xi_j + \beta r_j )}{1+ \sum_{k =1 }^J \exp(\gamma(\theta) F_k^{1T}(\hat \theta_k) + \xi_k + \beta r_k )}
+    % [1-\pi_1(\theta, (\hat \theta_{-j}, \hat \theta_j))] 
+    %\phi(\hat \theta_{-j}; \theta) d\hat \theta_{-j}
+\end{align}
 
 
 \vspace{2cm}
