Updates from Overleaf

--- a/Ideal intro_v2.tex
+++ b/Ideal intro_v2.tex
@@ -112,7 +112,7 @@ Using data that records initial and revised offers, and leveraging a reform that
 
 We develop and estimate a structural two-stage model of firm competition and consumer choice. Firms send simultaneous initial offers, consumers decide whether to solicit revisions, and firms respond with revised offers; we recover preference and cost parameters from observed offer sequences and purchase decisions. Counterfactuals \footnote{\textcolor{red}{[what counterfactuals should we study?]}} show that permitting revised offers [IN(DE)CREASES] purchase rates and [INCREASES-lowers] average final prices, [RAISING/LOWERING]  aggregate consumer surplus, [MENTION DISTRIBUTIONAL IMPACTS].
 
-Diego: May this have anticompetitive effects? Like price matching, that helps firms monitor collusion (even if it is tacit). Maybe forbidding new requests reduces price transparency. The effect of transparency on competition and  prices is ambiguous: Green and Porter (1984), Ater and Rigbi (2023?), Luco (2017?), Montag et al (??), mi paper con JP.
+%Diego: May this have anticompetitive effects? Like price matching, that helps firms monitor collusion (even if it is tacit). Maybe forbidding new requests reduces price transparency. The effect of transparency on competition and  prices is ambiguous: Green and Porter (1984), Ater and Rigbi (2023?), Luco (2017?), Montag et al (??), mi paper con JP.
 \end{abstract}
 
 \sepline
@@ -158,7 +158,7 @@ Ideally, one would observe not only initial offers but also all revised offers a
 
 %%%% \textbf{What we do}
 
-We study the impact of allowing consumers to request revised offers in a centralized market for annuities in Chile. The setting offers rich administrative data on initial and revised offers, as well as on the final purchase decision. Moreover, we leverage variation in the market design, since in 2025 the regulator prohibited revised offers. 
+\textbf{We study the welfare and distributive impacts of allowing consumers to request revised offers in a centralized market for annuities in Chile.} The setting offers rich administrative data on initial and revised offers, as well as on the final purchase decision. Moreover, we leverage variation in the market design, since in 2025 the regulator prohibited revised offers. 
 
 %We use data from the Chilean centralized annuities marketplace to study the impact of revised offers. This market presents several particularities that make it suitable to study the impact of revised offers. First, because it is a centralized market there is data on all the initial and revised offers consumers receive. Secondly, prior to 2025 requesting revised offers was common, in our sample more than 70\% of consumers requested one. Third, in 2025 the regulator prohibited revised offers, which provides exogenous variation. 
 
