--- a/ideal_intro/ideal_intro_2025_11_15.tex
+++ b/ideal_intro/ideal_intro_2025_11_15.tex
@@ -93,9 +93,7 @@
 
 \begin{abstract}
 
-In markets with asymmetric information, consumers may use initial price offers as leverage to obtain better prices. The welfare and distributional effects of this consumer search, however, are ambiguous. If searching signals lower search costs or higher price elasticity, firms can best respond by offering higher initial prices. This description fits the
-markets for retirement annuities, personal loans, auto insurance, and housing, among others. Despite potentially significant effects on welfare and competition, there is limited evidence on the size and magnitude of this “search and leverage” effect. We show that identifying the joint distribution of search costs and price elasticity is critical for understanding the effects of search and leverage. Using data from the Chilean annuities market, we estimate this distribution and show that the Chilean regulator’s decision to forbid the search for revised offers increased welfare by 11\%, with significant distributional effects.
-
+In markets with asymmetric information, consumers may use initial price offers as leverage to obtain better prices. The welfare and distributional effects of this consumer search, however, are ambiguous. If searching signals lower search costs or higher price elasticity, firms can best respond by offering higher initial prices. This description fits the markets for retirement annuities, personal loans, auto insurance, and housing, among others. Despite potentially significant effects on welfare and competition, there is limited evidence on the size and magnitude of this “search and leverage” effect. We show that identifying the joint distribution of search costs and price elasticity is critical for understanding the effects of search and leverage. Using data from the Chilean annuities market, we estimate this distribution and show that the Chilean regulator’s decision to forbid the search for revised offers increased welfare by 11\%, with significant distributional effects.
 
 % Diego: May this have anticompetitive effects? Like price matching, that helps firms monitor collusion (even if it is tacit). Maybe forbidding new requests reduces price transparency. The effect of transparency on competition and  prices is ambiguous: Green and Porter (1984), Ater and Rigbi (2023?), Luco (2017?), Montag et al (??), mi paper con JP.
 \end{abstract}
@@ -107,8 +105,7 @@ markets for retirement annuities, personal loans, auto insurance, and housing, a
 
 Consider a market where consumers receive offers from one or more sellers, and then use those offers to negotiate better prices. 
 
-
- \newpage
+\newpage
 
 In our setting all consumers are first time buyers. No switching, no complementary products/cross-selling. No need to restrict to ``first-time buyers'' like \textcite{cosconati_competing_2025} (where it is hard to even define what a first time buyer is).
 
